   - bug 893 - Lazy CourseChange notification for WaypointMobilityModel
   - bug 979 - Multi-octet fields in Wi-Fi headers have wrong endianness
   - bug 988 - MacRxMiddle::SequenceControlSmaller method
   - bug 993 - MinstrelWifiManager::UpdateStats useless if clause
   - bug 1015 - GetChannelFrequencyMhz() does not match with standard

Known issues
------------

Release 3.9
===========

Availability
------------
This release is immediately available from:
http://www.nsnam.org/releases/ns-allinone-3.9.tar.bz2

Supported platforms
-------------------
ns-3.9 has been tested on the following platforms:
- Ubuntu 10.04 LTS 32/64-bit gcc-4.4.3
- Fedora Core 12 64-bit gcc-4.4.3
- Ubuntu 9.10 32-bit gcc-4.4.1
- Ubuntu 8.04 LTS 64-bit gcc-4.2.4
- Fedora Core 5 32-bit gcc-4.1.1
- Mac OS X Leopard powerpc gcc-4.0.1
- Windows Cygwin 1.7.5

Not all ns-3 options are available on all platforms; consult the
wiki for more information:
http://www.nsnam.org/wiki/index.php/Installation

New user-visible features
-------------------------

   - A reorganisation of the construction of Wi-Fi transmit rates has
     been undertaken with the aim of simplifying the task of
     supporting further IEEE 802.11 PHYs. This work has been completed
     under the auspices of Bug 871. A consequence of this work is that
     WifiModes have a new (hopefully future-proof) naming, and
     simulations which specify rates by name will need updating. The
     list of new rate names is given in the error message produced
     when an attempt is made to use any invalid rate name (including
     those that were previously valid).

   - A new OFDM error rate model for WiFi (NistErrorRateModel); this model
     has been validated in clear-channel testbed tests.  For 802.11b, it
     uses the same underlying model as the YansErrorRateModel, but it differs
     from YansErrorRateModel for OFDM modes (802.11a/g).  The default
     YansWifiPhyHelper has been changed to use this model.
